fixed bug: navbar clicks on tablets

--- a/main.scss
+++ b/main.scss
@@ -34,7 +34,12 @@ body {
         color: $grey;
         @include prefix(transition, color 0.2s ease-out)
       }
-      a:hover {
+      @media (min-width: 992px) {
+        a:hover {
+          color: whitesmoke;
+        }
+      }
+      a:active {
         color: whitesmoke;
       }
     }
